--- a/catalog.html
+++ b/catalog.html
@@ -25,14 +25,14 @@
           <a class="main-logo" href="index.html">
             <img class="logo" src="img/logo-technomart.png" width="107" height="17" alt="Логотип магазина Техномарт.">
           </a>
-          <form class="search search-on" method="get" action="https://echo.htmlacademy.ru/">
-            <label class="search-label">
-              <input type="search" name="search" placeholder="Поиск:">
+          <form class="search-form search-form-on" method="get" action="https://echo.htmlacademy.ru/">
+            <label class="label label-search">
+              <input class="input-search" type="search" name="search" placeholder="Поиск:">
             </label>
-            <label class="search-label">Закладки:
+            <label class="label label-save-marks">Закладки:
               <input type="number" name="save-marks" placeholder="0">
             </label>
-            <label class="search-label">Корзина:
+            <label class="label label-basket">Корзина:
               <input type="number" name="basket" placeholder="10">
             </label>
             <button class="order" type="button">Оформить заказ</button>
@@ -146,59 +146,93 @@
         </div>
         <ul class="products-list">
           <li class="products-item">
-            <img src="https://via.placeholder.com/144x128" width="144" height="128" alt="Удобная ручка.">
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="text">30500 Р.</p>
-            <p class="text text-sale">25500 Р.</p>
-          </li>
-          <li class="products-item">
-            <img src="https://via.placeholder.com/144x128" width="144" height="128" alt="Удобная ручка.">
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="text">30500 Р.</p>
-            <p class="text text-sale">25500 Р.</p>
-          </li>
-          <li class="products-item new">
-            <div class="products-button">
-              <button type="button">КУПИТЬ</button>
-              <button type="button">В закладки</button>
+            <div class="block">
+              <img class="img-3" src="img/products-3.png" width="144" height="128" alt="Удобная ручка.">
             </div>
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="text">30500 Р.</p>
-            <p class="text text-sale">25500 Р.</p>
-          </li>
-          <li class="products-item new">
-            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="За этой моделью возвращаются.">
-            <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="text">22500 Р.</p>
-            <p class="text text-sale">15500 Р.</p>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="text">30500 Р.</p>
+              <p class="text text-sale">25500 Р.</p>
+            </div>
           </li>
           <li class="products-item">
-            <img src="https://via.placeholder.com/144x128" width="144" height="128" alt="Удобная ручка.">
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="text">30500 Р.</p>
-            <p class="text text-sale">25500 Р.</p>
+            <div class="block">
+              <img class="img-3" src="img/products-3.png" width="144" height="128" alt="Удобная ручка.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="text">30500 Р.</p>
+              <p class="text text-sale">25500 Р.</p>
+            </div>
+          </li>
+          <li class="products-item new products-item-active">
+            <div class=" block products-button">
+              <button class="button button-buy" type="button">КУПИТЬ</button>
+              <button class="button button-bookmark" type="button">В закладки</button>
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="text">30500 Р.</p>
+              <p class="text text-sale">25500 Р.</p>
+            </div>
           </li>
           <li class="products-item new">
-            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="Большая ёмкость аккумуляторной батареи.">
-            <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-            <p class="text text-sale">12500 Р.</p>
-          </li>
-          <li class="products-item new">
-            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="За этой моделью возвращаются.">
-            <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
-            <p class="text">22500 Р.</p>
-            <p class="text text-sale">15500 Р.</p>
+            <div class="block">
+              <img class="img-2" src="img/products-2.png" width="127" height="112" alt="За этой моделью возвращаются.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="text">22500 Р.</p>
+              <p class="text text-sale">15500 Р.</p>
+            </div>
           </li>
           <li class="products-item">
-            <img src="https://via.placeholder.com/144x128" width="144" height="128" alt="Удобная ручка.">
-            <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
-            <p class="text">30500 Р.</p>
-            <p class="text text-sale">25500 Р.</p>
+            <div class="block">
+              <img class="img-3" src="img/products-3.png" width="144" height="128" alt="Удобная ручка.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="text">30500 Р.</p>
+              <p class="text text-sale">25500 Р.</p>
+            </div>
           </li>
           <li class="products-item new">
-            <img src="https://via.placeholder.com/127x112" width="127" height="112" alt="Большая ёмкость аккумуляторной батареи.">
-            <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
-            <p class="text text-sale">12500 Р.</p>
+            <div class="block">
+              <img class="img-4" src="img/products-4.png" width="127" height="112" alt="Большая ёмкость аккумуляторной батареи.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+              <p class="text text-sale without-sale">12500 Р.</p>
+            </div>
+          </li>
+          <li class="products-item new">
+            <div class="block">
+              <img class="img-2" src="img/products-2.png" width="127" height="112" alt="За этой моделью возвращаются.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
+              <p class="text">22500 Р.</p>
+              <p class="text text-sale">15500 Р.</p>
+            </div>
+          </li>
+          <li class="products-item">
+            <div class="block">
+              <img class="img-3" src="img/products-3.png" width="144" height="128" alt="Удобная ручка.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
+              <p class="text">30500 Р.</p>
+              <p class="text text-sale">25500 Р.</p>
+            </div>
+          </li>
+          <li class="products-item new">
+            <div class="block">
+              <img class="img-4" src="img/products-4.png" width="127" height="112" alt="Большая ёмкость аккумуляторной батареи.">
+            </div>
+            <div class="block">
+              <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
+              <p class="text text-sale without-sale">12500 Р.</p>
+            </div>
           </li>
         </ul>
         <ul class="pagination-list">
@@ -209,9 +243,9 @@
         </ul>
       </section>
       <article class="mean">
-        <div class="wrapper">
+        <div class="wrapper mean-block">
           <h2 class="title">ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-          <p class="text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
+          <p class="text">Перфоратор —универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.</p>
           <p class="text">Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.</p>
           <p class="text">В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
@@ -270,6 +304,19 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal-add">
+      <h2 class="title">Товар добавлен в корзину!</h2>
+      <div class="add-block">
+        <button class="button order-button" type="submit">Оформить заказ</button>
+        <button class="button continue -button" type="submit">Продолжить покупки</button>
+      </div>
+      <button class="button-close" type="button">
+        <span class="visually-hidden">Закрыть</span>
+        <img src="img/icon-close.svg" width="21" height="21">
+      </button>
+    </section>
+
 
   </body>
 </html>
